# MULTICAL

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  bump-version.yml  release.yml  test-build.yml
api/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
api/src/: auth.ts  db.ts  env.ts  index.ts  password.ts
api/src/routes/: dashboard.ts  debts.ts  deleted.ts  materials.ts  notifications.ts  printing.ts  products.ts  sales.ts  services.ts  statements.ts  stock.ts  users.ts
app/: database.js  electron.config.js  package.json  pnpm-workspace.yaml
app/main/: preload.js
app/renderer/: index.html
app/renderer/assets/css/: components.css
app/renderer/assets/js/: login.js
app/renderer/assets/js/components/: receipt.js
app/renderer/assets/js/pages/: dashboard.js  debts.js  printing.js  products.js  sales.js  settings.js  stock.js
app/renderer/assets/js/utils/: vinyl-colors.js
app/renderer/pages/: dashboard.html  debts.html  login.html  printing.html  products.html  sales.html  settings.html  stock.html
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
frontend/assets/css/: components.css  fonts.css  main.css  print.css  theme.css
frontend/public/: tauri-bridge.js
frontend/src/: api.rs  app.rs  auto_refresh.rs  main.rs  remote.rs
frontend/src/components/: calendar.rs  dropdown.rs  header.rs  loading.rs  mod.rs  modal.rs  receipt.rs  sidebar.rs  toast.rs
frontend/src/pages/: dashboard.rs  debts.rs  deleted.rs  login.rs  mod.rs  printing.rs  products.rs  sales.rs  services.rs  settings.rs  stock.rs
src-tauri/: Cargo.toml  build.rs  nsis-uninstall-hooks.nsh  tauri.conf.json  tauri.windows.conf.json  turso.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: postrm.sh
src-tauri/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  statement_pdf.rs
src-tauri/src/commands/: auth_cmds.rs  dashboard.rs  debts.rs  materials.rs  mod.rs  products.rs  sales.rs  services.rs  statements.rs  stock.rs  transactions.rs  updates.rs
