[package]
name = "multiprints-frontend"
version = "1.1.11"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList", "Storage", "console", "Notification", "Event"] }
js-sys = "0.3"
console_log = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
gloo-storage = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
